# SRBio

./: .gitignore  CMakeLists.txt
include/: SRBio.h  SRBio_config.h.in
include/private/: wrap.h
src/: SRB_read.c  SRB_utils.c  SRB_write.c  main.c  mex_srbio_read.c  mex_srbio_write.c  wrap.c
src/matlab/: rbread.m  rbwrite.m
